Added some practice notes